--- a/pages/user/bindCard/bindCard.wxss
+++ b/pages/user/bindCard/bindCard.wxss
@@ -93,10 +93,14 @@ switch{
 .btnSpecialBlock{
   margin: 56rpx 31rpx;
   width: auto;
+  background: #fff;
 }
 
 .picker{
   height: 90rpx;
+}
+button{
+  padding: 0;
 }
 
 .sdwd{
