--- a/components/addressItem/index.wxss
+++ b/components/addressItem/index.wxss
@@ -1,10 +1,9 @@
-
-
-.orderContentLeft{
+.orderContentLeft {
   flex-grow: 1;
   padding: 0 22rpx;
 }
-.orderContent{
+
+.orderContent {
   background: #fff;
   flex-grow: 1;
   height: 138rpx;
@@ -14,78 +13,87 @@
   align-items: center;
   border-top: 2rpx solid #f6f6f6;
 }
-.addressNew{
+
+.addressNew {
   display: flex;
   flex-direction: row;
   align-items: center;
   height: 137rpx;
 }
-.addressNew view:last-child{
-  font-size:28rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(51,51,51,1);
+
+.addressNew view:last-child {
+  font-size: 28rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(51, 51, 51, 1);
   margin-left: 12rpx;
 }
-.orderContentRight .icon{
+
+.orderContentRight .icon {
   width: 28rpx;
   height: 28rpx;
 }
 
 .typeClass {
-  padding: 0rpx 10rpx;
-  background: #fff;
   display: inline;
-  border: 2rpx solid rgba(108, 65, 39, 1);
+}
+
+.typeClass view {
+  display: inline;
+  line-height: 24rpx;
   border-radius: 15rpx;
   font-size: 20rpx;
   font-family: PingFang-SC-Medium;
   font-weight: 500;
-  color: rgba(108, 65, 39, 1);
-  line-height: 24rpx;
+  padding: 0rpx 10rpx;
+  background: #fff;
 }
-.orderContentRight{
+
+.orderContentRight {
   padding-right: 28rpx;
 }
-.orderContentLeftTop{
+
+.orderContentLeftTop {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  font-size:28rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(51,51,51,1);
+  font-size: 28rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(51, 51, 51, 1);
   align-items: center;
 }
-.orderContentLeftBottom{
-  font-size:28rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(153,153,153,1);
-  line-height:44rpx;
+
+.orderContentLeftBottom {
+  font-size: 28rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(153, 153, 153, 1);
+  line-height: 44rpx;
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
-.icon{
+.icon {
   width: 46rpx;
   height: 46rpx;
 }
-.icon image{
+
+.icon image {
   width: 100%;
   height: 100%;
 }
 
-.orderContentLeftBottom view{
+.orderContentLeftBottom view {
   display: inline;
-  padding:4rpx 17rpx;
-  background:rgba(204,0,0,1);
-  border-radius:500rpx;
-  font-size:20rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(255,255,255,1);
-  line-height:24rpx;
-  margin-right:15rpx;
+  padding: 4rpx 17rpx;
+  background: rgba(204, 0, 0, 1);
+  border-radius: 500rpx;
+  font-size: 20rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(255, 255, 255, 1);
+  line-height: 24rpx;
+  margin-right: 15rpx;
 }
