--- a/pages/address/address.wxss
+++ b/pages/address/address.wxss
@@ -13,16 +13,16 @@
 }
 
 .typeClass {
-  padding: 0rpx 10rpx;
   background: #fff;
-  display: inline;
-  border: 2rpx solid rgba(108, 65, 39, 1);
   border-radius: 15rpx;
   font-size: 20rpx;
   font-family: PingFang-SC-Medium;
   font-weight: 500;
-  color: rgba(108, 65, 39, 1);
   line-height: 24rpx;
+}
+.typeClass view{
+  padding: 0rpx 10rpx;
+  display: inline;
 }
 
 .contentBox {
@@ -87,6 +87,7 @@
 .btnSpecialBlock {
   margin: 35rpx;
   width: auto;
+  background: #fff;
 }
 
 .diaLog {
