--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -8,7 +8,9 @@
   border-top: 2rpx solid #f6f6f6;
   z-index: 3;
 }
-
+.btnSpecialBlock{
+  background: #fff;
+}
 .btnSpecialBlock {
   width: auto;
   margin: 10rpx 25rpx;
@@ -256,6 +258,9 @@ image {
 }
 
 .orderOptionItem {
+  padding: 0rpx 26rpx;
+}
+.orderOptionItemAll{
   background: rgba(245, 245, 245, 1);
   border-radius: 301rpx;
   font-size: 26rpx;
@@ -264,20 +269,20 @@ image {
   color: rgba(28, 28, 28, 1);
   text-align: center;
   line-height: 62rpx;
-  padding: 0rpx 26rpx;
   display: inline;
   margin-left: 24rpx;
+
 }
 .orderOptionItem:first-child{
   margin-left: 0;
 }
-.optionActive {
-  background: linear-gradient(90deg, rgba(108, 65, 39, 1), rgba(142, 82, 36, 1));
+.optionActive view{
   border-radius: 31rpx;
   font-size: 26rpx;
   font-family: PingFang-SC-Regular;
   font-weight: 400;
   color: rgba(255, 255, 255, 1);
+  padding: 0 26rpx;
 }
 
 .infoBox {
