--- a/pages/user/chooseCard/chooseCard.wxml
+++ b/pages/user/chooseCard/chooseCard.wxml
@@ -24,5 +24,5 @@
   </view>
 </view>
 
-<navigator open-type='navigate' url='/pages/user/bindCard/bindCard' class='btnSpecialBlock'>添加银行卡</navigator>
+<navigator open-type='navigate' url='/pages/user/bindCard/bindCard' class='btnSpecialBlock'><theme-view type="themeBack">添加银行卡</theme-view></navigator>
 
