--- a/pages/user/chooseCard/chooseCard.wxss
+++ b/pages/user/chooseCard/chooseCard.wxss
@@ -14,6 +14,9 @@
   border-radius:5rpx;
   overflow: hidden;
 }
+.btnSpecialBlock{
+  background: #fff;
+}
 .TopTop{
   display: flex;
   flex-direction: column;
