--- a/pages/user/draw/draw.wxss
+++ b/pages/user/draw/draw.wxss
@@ -5,6 +5,9 @@
   font-weight:500;
   color:rgba(51,51,51,1);
 }
+button{
+  padding: 0;
+}
 .titleRight{
   font-size:28rpx;
   font-family:PingFang-SC-Medium;
@@ -54,7 +57,6 @@
   margin: 48rpx auto;
   width:657rpx;
   height:96rpx;
-  background:linear-gradient(90deg,rgba(130,76,31,1),rgba(151,79,10,1));
   border-radius:48rpx;
   font-size:32rpx;
   font-family:PingFang-SC-Medium;
