--- a/pages/user/incomeInfo/incomeInfo.wxml
+++ b/pages/user/incomeInfo/incomeInfo.wxml
@@ -1,6 +1,6 @@
 <!--pages/money/money.wxml-->
 <view class='backBox'>
-<image src='./res/img/bonus-bg.png'></image>
+  <image src='./res/img/bonus-bg.png'></image>
   <view class='textBox'>
     <view class='moneyBox'>
       <view>￥</view>
@@ -13,15 +13,20 @@
 
 <view class='mainBox'>
   <view class='navBox'>
-    <view class='navItem' class='"navItem "+ {{item.id == showId ? "navActive": ""}}' data-id='{{item.id}}' bindtap='changeNav' wx:for='{{navList}}' wx:key='index'>{{item.title}}</view>
+    <view class='navItem' class="navItem" data-id='{{item.id}}' bindtap='changeNav' wx:for='{{navList}}' wx:key='index'>
+      <theme-view wx:if="{{item.id == showId}}" type="themeFont">{{item.title}}</theme-view>
+      <view wx:else type="themeFont">{{item.title}}</view>
+    </view>
   </view>
 
   <view class='listBox' wx:for='{{infoList}}' wx:key='index'>
     <view class='itemBox'>
       <view class='itemTop'>
-      
+
         <view class='itemLeft'>
-          <view class='userImg'><image src='{{item.xdr_avatar}}'></image></view>
+          <view class='userImg'>
+            <image src='{{item.xdr_avatar}}'></image>
+          </view>
           <view class='leftText'>
             <view>{{item.xdr_nickname}}</view>
             <view>{{item.create_time}}</view>
@@ -44,7 +49,7 @@
           </view>
         </view>
 
-        
+
         <view class='itemBottomItem'>
           <view class='bottomItemBox'>
             <view class='bottonItemTitle'>消费金额</view>
@@ -56,7 +61,7 @@
           </view>
         </view>
 
-        
+
         <view class='itemBottomItem'>
           <view class='bottomItemBox'>
             <view class='bottonItemTitle'>订单号</view>
@@ -67,11 +72,11 @@
             <view class='bottonItemValue'>{{item.num}}%</view>
           </view>
         </view>
-      
+
       </view>
-      
+
     </view>
 
   </view>
-  
+
 </view>
