--- a/pages/user/levelMsg/levelMsg.wxml
+++ b/pages/user/levelMsg/levelMsg.wxml
@@ -1,26 +1,28 @@
 <!--pages/join/message/message.wxml-->
 <view class='back'>
-<view class='title'>
-  升级代理规则说明
-</view>
+  <view class='title'>
+    升级代理规则说明
+  </view>
 
-<view class='contentItem'>
-  <view class='contentTitle'>代理（合伙人）致辞： </view>
-  <text class='contentText'>产品，始终是代理商全部的寄托。 
+  <view class='contentItem'>
+    <view class='contentTitle'>代理（合伙人）致辞： </view>
+    <text class='contentText'>产品，始终是代理商全部的寄托。 
   选择怎样的产品，注定了代理商将进入怎样的市场角色； 
   中奇品牌源于高科专利，掌控市场脉动，自然成就每一位选择者的财富人生！
-  </text> 
-</view>
+  </text>
+  </view>
 
-<view class='contentItem'>
-  <view class='contentTitle'>代理（合伙人）致辞： </view>
-  <text class='contentText'>产品，始终是代理商全部的寄托。 
+  <view class='contentItem'>
+    <view class='contentTitle'>代理（合伙人）致辞： </view>
+    <text class='contentText'>产品，始终是代理商全部的寄托。 
   选择怎样的产品，注定了代理商将进入怎样的市场角色； 
   中奇品牌源于高科专利，掌控市场脉动，自然成就每一位选择者的财富人生！
-  </text> 
-</view>
+  </text>
+  </view>
 
 </view>
 <view class='footBtn'>
-  <navigator bindtap='callPhone' class='btnSpecialBlock'>联系客服</navigator>
+  <navigator bindtap='callPhone' class='btnSpecialBlock'>
+    <theme-view type="themeBack">联系客服</theme-view>
+  </navigator>
 </view>
