--- a/pages/join/gifts/gifts.wxss
+++ b/pages/join/gifts/gifts.wxss
@@ -1,74 +1,80 @@
 /* pages/join/gifts/gifts.wxss */
 
-.titleBox{
-  height:76rpx;
-  background:rgba(255,250,230,1);
-  border:1rpx solid rgba(255, 250, 235, 1);
+.titleBox {
+  height: 76rpx;
+  background: rgba(255, 250, 230, 1);
+  border: 1rpx solid rgba(255, 250, 235, 1);
   display: flex;
   flex-direction: row;
   align-items: center;
 }
-.titleBox view:first-child{
+
+.titleBox view:first-child {
   margin-left: 34rpx;
-  font-size:28rpx;
-  font-family:PingFang-SC-Regular;
-  font-weight:400;
-  color:rgba(51,51,51,1);
-  line-height:48rpx;
-}
-.titleBox view:last-child{
-  margin-left: 13rpx;
-  font-size:26rpx;
-  font-family:PingFang-SC-Regular;
-  font-weight:400;
-  color:rgba(108,65,39,1);
-  line-height:48rpx;
-}
-.carImg image{
-  width:180rpx;
-  height:180rpx;
-  background:rgba(255,255,255,1);
-  border-radius:5rpx;
+  font-size: 28rpx;
+  font-family: PingFang-SC-Regular;
+  font-weight: 400;
+  color: rgba(51, 51, 51, 1);
+  line-height: 48rpx;
 }
 
-.cardItem{
+.titleBox view:last-child {
+  margin-left: 13rpx;
+  font-size: 26rpx;
+  font-family: PingFang-SC-Regular;
+  font-weight: 400;
+  color: rgba(108, 65, 39, 1);
+  line-height: 48rpx;
+}
+
+.carImg image {
+  width: 180rpx;
+  height: 180rpx;
+  background: rgba(255, 255, 255, 1);
+  border-radius: 5rpx;
+}
+
+.cardItem {
   padding: 22rpx;
   display: flex;
   flex-direction: row;
   align-items: center;
-  border:2rpx solid rgba(230,230,230,1);
-  border-radius:5rpx;
+  border: 2rpx solid rgba(230, 230, 230, 1);
+  border-radius: 5rpx;
   margin: 20rpx 48rpx 20rpx 48rpx;
 }
 
-.cardLeft{
+.cardLeft {
   display: flex;
   flex-direction: row;
   align-items: center;
   margin-right: 10rpx;
-  flex-grow:1;
+  flex-grow: 1;
 }
-.cardContextText{
-  font-size:26rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(153,153,153,1);
+
+.cardContextText {
+  font-size: 26rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(153, 153, 153, 1);
   max-height: 100rpx;
   margin-top: 20rpx;
   overflow: hidden;
 }
-.cardContextTitle{
-  font-size:30rpx;
-  font-family:PingFang-SC-Heavy;
-  font-weight:800;
-  color:rgba(51,51,51,1);
-  line-height:48rpx;
+
+.cardContextTitle {
+  font-size: 30rpx;
+  font-family: PingFang-SC-Heavy;
+  font-weight: 800;
+  color: rgba(51, 51, 51, 1);
+  line-height: 48rpx;
 }
-.cardContext{
+
+.cardContext {
   margin-left: 24rpx;
 }
 
-.back{
+.back {
   position: fixed;
   height: 100%;
   width: 100%;
@@ -76,52 +82,65 @@
   top: 0;
   z-index: -1;
 }
-.btnSpecialBlock{
+
+.btnSpecialBlock {
   width: auto;
   margin: 20rpx 24rpx 11rpx 24rpx;
   background: #fff;
 }
-.footBtn{
+
+.footBtn {
   width: 100%;
   position: fixed;
   bottom: 0;
   z-index: 1;
 }
 
-.cardChacked{
-  background:rgba(245,245,245,1);
-  box-shadow:0px 0px 10rpx 0px rgba(245,245,245,0.6);
+.cardChacked {
+  background: rgba(245, 245, 245, 1);
+  box-shadow: 0px 0px 10rpx 0px rgba(245, 245, 245, 0.6);
 }
 
-
-.giftInfoPage{
-  height: 1144rpx;
+.giftInfoPage {
+  height: 844rpx;
   position: fixed;
-  bottom: 0;
+  bottom: 200rpx;
   background: #fff;
   z-index: 2;
-  width: 100%;
+  width: 80%;
   overflow-y: scroll;
-}
-.backDark{
-  background: #000000;
-  z-index: 0;
-  opacity:0.5;
-}
-.giftInfoPage .iconClose{
-  position: fixed;
-  right: 18rpx;
-  top:63rpx;
+  left: 10%;
+  border-radius: 30rpx;
 }
 
-.giftInfoPage .iconClose image{
+.backDark {
+  background: #000;
+  z-index: 2;
+  opacity: 0.5;
+}
+.backDark2 {
+  background: #000;
+  z-index: 0;
+  opacity: 0.5;
+}
+
+.iconClose {
+  position: fixed;
+  right: 88rpx;
+  top: 153rpx;
+  z-index: 5;
+}
+
+.iconClose image {
   width: 64rpx;
   height: 64rpx;
 }
-.giftInfoPage rich-text{
+
+.giftInfoPage rich-text {
   height: 100%;
 }
-.orderPage{
+
+.orderPage {
   height: 630rpx;
   width: 100%;
   position: fixed;
@@ -129,23 +148,26 @@
   z-index: 1;
   background: #fff;
 }
-.orderTitleBox{
+
+.orderTitleBox {
   padding: 0 26rpx;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   height: 105rpx;
   align-items: center;
-  font-size:32rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(51,51,51,1);
+  font-size: 32rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(51, 51, 51, 1);
 }
-.orderContentLeft{
+
+.orderContentLeft {
   flex-grow: 1;
   padding: 0 22rpx;
 }
-.orderContent{
+
+.orderContent {
   flex-grow: 1;
   height: 138rpx;
   display: flex;
@@ -154,74 +176,85 @@
   align-items: center;
   border-top: 2rpx solid #f6f6f6;
 }
-.addressNew{
+
+.addressNew {
   display: flex;
   flex-direction: row;
   align-items: center;
   height: 137rpx;
 }
-.addressNew view:last-child{
-  font-size:28rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(51,51,51,1);
+
+.addressNew view:last-child {
+  font-size: 28rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(51, 51, 51, 1);
   margin-left: 12rpx;
 }
-.orderContentRight .icon{
+
+.orderContentRight .icon {
   width: 28rpx;
   height: 28rpx;
 }
-.orderContentRight{
+
+.orderContentRight {
   padding-right: 28rpx;
 }
-.giftContentBox view:first-child{
+
+.giftContentBox view:first-child {
   margin-left: 30rpx;
-  font-size:28rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(51,51,51,1);
+  font-size: 28rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(51, 51, 51, 1);
 }
-.giftContentBox view:last-child{
-  font-size:26rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(108,65,39,1);
-  border:1rpx solid rgba(255, 250, 235, 1);
+
+.giftContentBox view:last-child {
+  font-size: 26rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(108, 65, 39, 1);
+  border: 1rpx solid rgba(255, 250, 235, 1);
   background: rgba(255, 250, 235, 1);
   padding: 20rpx 16rpx;
   margin: 20rpx 28rpx;
   max-height: 100rpx;
   overflow: hidden;
 }
-.border{
+
+.border {
   display: flex;
   flex-direction: row;
 }
-.border image{
+
+.border image {
   flex-grow: 1;
-  height:10rpx;
+  height: 10rpx;
 }
-.giftContentBox{
+
+.giftContentBox {
   padding-top: 44rpx;
 }
 
-.closeInfo .iconClose{
+.closeInfo .iconClose {
   width: 64rpx;
   height: 64rpx;
 }
-.orderContentLeftTop{
+
+.orderContentLeftTop {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  font-size:28rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(51,51,51,1);
+  font-size: 28rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(51, 51, 51, 1);
 }
-.orderContentLeftBottom{
-  font-size:28rpx;
-  font-family:PingFang-SC-Medium;
-  font-weight:500;
-  color:rgba(153,153,153,1);
-  line-height:44rpx;
+
+.orderContentLeftBottom {
+  font-size: 28rpx;
+  font-family: PingFang-SC-Medium;
+  font-weight: 500;
+  color: rgba(153, 153, 153, 1);
+  line-height: 44rpx;
 }
