--- a/pages/user/myGroup/groupInfo/index.wxml
+++ b/pages/user/myGroup/groupInfo/index.wxml
@@ -4,24 +4,28 @@
   <view class='navBox'>
     <view class='navItem' class='"navItem "+ {{item.id == showId ? "navActive": ""}}' data-id='{{item.id}}' bindtap='changeNav' wx:for='{{navList}}' wx:key='index'>{{item.title}}</view>
   </view>
+  <loading wx:if="{{loadFlag}}" />
+  <view wx:else>
+    <view class='itemBox' wx:for="{{infoList}}" wx:key='index'>
+      <view class='itemLeft'>
+        <view class='leftLeft'>
+          <view class='userImg'>
+            <image src='{{item.avatar}}'></image>
+          </view>
+        </view>
+        <view class='leftRight'>
+          <view class='name'>{{item.level}} {{item.nickname}}</view>
+          <view class='info'>团队
+            <view class='specialFont'>{{item.xiaji_num}}</view> 人</view>
+        </view>
+      </view>
+      <view class='itemRight'>
+        <view class='time'>{{item.time}}</view>
+        <view class='ooInfo'>今日新增{{item.today_count}}人 本月新增{{item.month_count}}人</view>
+      </view>
+    </view>
 
-  <view class='itemBox'>
-    <view class='itemLeft'>
-      <view class='leftLeft'>
-        <view class='userImg'><image src=''></image></view>
-      </view>
-      <view class='leftRight'>
-        <view class='name'>懂事长合伙人微信昵称</view>
-        <view class='info'>团队 <view class='specialFont'>20</view> 人</view>
-      </view>
-    </view>
-    <view class='itemRight'>
-      <view class='time'>2019-01-19 20:45:54</view>
-      <view class='ooInfo'>今日新增0人 本月新增0人</view>
-    </view>
   </view>
 
 
-
-  
 </view>
