--- a/pages/user/referCenter/referCenter.wxml
+++ b/pages/user/referCenter/referCenter.wxml
@@ -1,7 +1,7 @@
 <!--pages/user/referCenter/referCenter.wxml-->
 
 <view class='back'>
-  <image src='/res/icon/user-bg.png'></image>
+  <image mode='aspectFill' src='{{bgImg}}'></image>
 </view>
 
 
